Started working on refresh cookie
